[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/rooftop_level/sprites/S2_3x5_card/S2_3x5_card.png" type="Texture" id=1]
[ext_resource path="res://assets/code/rooftop_level/study_card_projectile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.42329, 4.30932 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.476758 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.091, 1.05231 )
shape = SubResource( 1 )
[connection signal="collision" from="." to="." method="_on_KinematicBody2D_collision"]
[connection signal="death" from="." to="." method="_on_KinematicBody2D_death"]
[connection signal="health_changed" from="." to="." method="_on_KinematicBody2D_health_changed"]
